# django-rest-framework.org-tutorial-1-serialization

./: .ruff.toml  README.md  pyproject.toml
core/: settings.py  urls.py
core/snippets/: apps.py  urls.py
core/snippets/migrations/: 0001_initial.py
core/snippets/models/: __init__.py  snippet.py
core/snippets/serializers/: __init__.py  snippet_serializer.py
core/snippets/views/: __init__.py  snippet_detail.py  snippet_detail_api_view.py  snippet_list.py  snippet_list_api_view.py
